# tractusx-sdk-services

./: .tractusx  CHANGELOG.md  DEPENDENCIES_DT-PULL-SERVICE  DEPENDENCIES_TEST-ORCHESTRATOR  README.md
.github/workflows/: codeql.yml  docker-build-dt-pull-service.yml  docker-build-test-orchestrator.yml  dt-pull-service-build.yml  ifs-build.yml  test-orchestrator-build.yml  testbed-docker-build-push.yml  verify.yml
IndustryFlagService/.azure-pipelines/: cd.stage-template.yaml  cd.yaml  ci.yaml  deploy-chart.ps1
IndustryFlagService/backend/: init.py
IndustryFlagService/frontend/: package.json
charts/dt-pull/: Chart.yaml  values.yaml
charts/dt-pull-service/: Chart.yaml  values-int.yaml  values-stable.yaml  values.yaml
charts/industry-flag-service/: Chart.yaml  README.md  values.yaml
charts/orchestrator/: Chart.yaml  values.yaml
charts/test-orchestrator/: Chart.yaml  values-int.yaml  values-stable.yaml  values.yaml
dt-pull-service/: Dockerfile  docker-notice.md  docker.env  pyproject.toml  requirements.txt  testing.env
dt-pull-service/docs/: documentation.md
dt-pull-service/dt_pull_service/: __init__.py  app.py  auth.py  config.py  dtr_helper.py  edr_helper.py  errors.py  models.py  utils.py
dt-pull-service/dt_pull_service/api/: dtr.py  edr.py
dt-pull-service/dt_pull_service/logging/: __init__.py  config.yml  log_manager.py
dt-pull-service/tests/: conftest.py  test_dtr_endpoints.py  test_edr_endpoints.py  test_models.py
industry-flag-service/: .gitignore  README.md
services/dt-pull-service/: Dockerfile  README.md  docker.env  pyproject.toml  testing.env
services/dt-pull-service/docs/: documentation.md
services/dt-pull-service/dt_pull_service/: app.py  config.py  dtr_helper.py  edr_helper.py  errors.py  models.py  utils.py
services/dt-pull-service/dt_pull_service/api/: dtr.py  edr.py
services/dt-pull-service/tests/: conftest.py  test_dtr_endpoints.py  test_edr_endpoints.py  test_models.py
services/orchestrator/: Dockerfile  README.md  docker.env  pyproject.toml  testing.env
services/orchestrator/docs/: documentation.md  usage_documentation.md
services/orchestrator/orchestrator/: app.py  config.py  errors.py  request_handler.py  utils.py  validator.py
services/orchestrator/orchestrator/api/: base_test_cases.py  industry_test_cases.py
services/orchestrator/orchestrator/schema_files/: shell_descriptors_spec_jsonschema.json
services/orchestrator/tests/: conftest.py  test_api_base.py  test_api_industry.py  test_submodels.py  test_validator.py
services/orchestrator/tests/test_files/: test_shell_descriptors_2_missing_and_incorrect.json
test-orchestrator/: .gitignore  Dockerfile  README.md  docker-notice.md  docker.env  pyproject.toml  requirements.txt  testing.env
test-orchestrator/docs/: Testbed_Components.drawio  documentation.md  pcf_documentation.md  sc_documentation.md  usage_documentation.md
test-orchestrator/docs/ccmapi_doc/: ccm_documentation.md  ccm_usage_documentation.md
test-orchestrator/scripts/: generate_reports.py  verify_solution.py
test-orchestrator/suites/: traceability.yaml
test-orchestrator/test_orchestrator/: __init__.py  app.py  auth.py  base_utils.py  cache.py  certificate_utils.py  config.py  errors.py  request_handler.py  standard_revision.py  utils.py  validator.py
test-orchestrator/test_orchestrator/api/: asset.py  base_test_cases.py  cert_validation.py  industry_test_cases.py  product_carbon_footprint.py  special_characteristics.py  submodel_schema_validation.py  traceability.py  traceability_test.py
test-orchestrator/test_orchestrator/checks/: catalog_version_validation.py  create_notification.py  policy_validation.py  request_catalog.py
test-orchestrator/test_orchestrator/checks/traceability/: __init__.py  edc_smoke.py  graph_check.py  recall_scenario.py  schema_check.py
test-orchestrator/test_orchestrator/logging/: __init__.py  config.yml  log_manager.py
test-orchestrator/test_orchestrator/schema_files/: MessageContentAspect-schema.json  shell_descriptors_jsonschema.json  shell_descriptors_spec_jsonschema.json
test-orchestrator/test_orchestrator/schemas/: __init__.py  assemblypartrelationship.json  partasbuilt.json  partasplanned.json  serialpart.json
test-orchestrator/test_orchestrator/utils/: __init__.py  product_carbon_footprint.py  special_characteristics.py  submodel_schema_validation.py
test-orchestrator/tests/: conftest.py  product_carbon_footprint.py  test_api_base.py  test_api_industry.py  test_certificate_validator.py  test_edc_smoke.py  test_graph_check.py  test_product_carbon_footprint.py  test_recall_scenario.py  test_schema_check.py  test_special_characteristics.py  test_submodels.py  test_traceability_api.py  test_utils.py  test_validate_catalog_version.py  test_validate_policy.py  test_validator.py
test-orchestrator/tests/test_files/: catalog-response-422.json  correct_element.json  subm_schema_example.json  test_shell_descriptors_1_full_correct.json  test_shell_descriptors_3_new_additions.json
(+97 files in other folders)
