# *************************************************************
# Eclipse Tractus-X - Digital Twin Pull Service
#
# Copyright (c) 2025 BMW AG
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License, Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0.
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and limitations
# under the License.
#
# SPDX-License-Identifier: Apache-2.0
# *************************************************************

[project]
name = "dt_pull_service"
version = "0.1.0"
description = "DT pull service for Catena-X"
authors = [
    {name = "Dénes Surman (dddenes)", email = "surmandenes@yahoo.com"},
]
maintainers = [
  {name = "Mathias Moser (matbmoser)", email = "mathias.moser@catena-x.net"}
]
license = { text = "Apache-2.0" }

[tool.poetry.dependencies]
python-dotenv = "^1.0.1"
tractusx-sdk = "^0.0.5"
fastapi = "0.115.7"
httpx = "^0.28.1"
python = "3.12.2"
requests = "^2.32.3"
uvicorn = "0.30.3"

[tool.poetry.dev-dependencies]
pylint = "^3.3.6"
pytest = "^8.1.1"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120
max-args = 8
max-locals=20
disable = ["R0903", "R0917", "W0621", "W1203"]
